# lz77_compressor

./: CMakeLists.txt  Compression.h  README  Trie.cpp  Trie.h  enum.h  lookupTable.cpp  lookupTable.h  lz77.conf  lz77App.cpp  lz77Compressor  lz77Frame.cpp  lz77Frame.h  lz77Type10.cpp  lz77Type10.h  lz77Type11.cpp  lz77Type11.h  lz77compressor  lzBase.cpp  lzBase.h  makefile  search.h  struct.h
Derric's_LZ77/: Compression.h  README.txt  lz77App.cpp  lz77App.h  lz77App.rc  lz77Dlg.cpp  lz77Dlg.h  makefile
